# stark

./: .gitattributes  .gitignore  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  yes.pub
docs/: requirements.txt
docs/source/: accum.rst  clustering.rst  conf.py  count.rst  emptycells.rst  gini.rst  impute.rst  index.rst  install.rst  loop.rst  merge.rst  model.rst  nDS.rst  overview.rst
sc3dg/: cli.py
sc3dg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
sc3dg/analysis/: api.py
sc3dg/analysis/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
sc3dg/bedtools/: Makefile  bedtools_build.py
sc3dg/bwa/: .readthedocs.yaml  bwa  rle.c  rle.h
sc3dg/clustering/re_DeepNanoHiC/: Wrapper.py  cload.py  deepNanoHiC_pipe.py  generate_workflow.py  re_zoom copy.py  re_zoom.py  template.JSON  tmp2
sc3dg/clustering/re_fasthigashi/: fasthigashi_pipe.py  fasthigashi_test.ipynb  generate_workflow.py  template.JSON  tmp2
sc3dg/commands/: accum.py  clustering.py  count.py  emptycells.py  gini.py  impute.py  index.py  loop.py  model.py  nDS.py  ssce.py
sc3dg/cutadapt/: _align.c  _kmer_finder.c  info.c  qualtrim.c
sc3dg/hictools/: hictools_wrapper.py  nohup.out
sc3dg/model/: dyn_util.c
sc3dg/samtools/: config.h  config.mk  config.status  version.h
sc3dg/utils/: assembly.py  barcode.sh  cell_calling.py  demultiplex.py  droplet.sh  fastp_buid.py  matrix.py  modify_sam.py  muti_demultiplex.py  parseSCpairs.py  recon_fq.py  scMethyl.py  scSPRITE.py  scaffold.py  sgt.py  sn_m3c.py  splitCell.py  tools.py
(+46 files in other folders)
