[build-system]
requires = ["setuptools", "wheel", "numpy", "cython", "pysam"]
build-backend = "setuptools.build_meta"

[project]
name = "sc3dg"
version = "0.0.66"
description = "A toolkit for processing single cell Hi-C data"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["sc3dg"]